@@ -92,6 +92,11 @@ class TestPersistenceLength(object):
         ax2 = p_run.plot(ax=ax)
 
         assert ax2 is ax
+    
+    def test_current_axes(self, p_run):
+        ax = plt.figure()
+        ax2 = p_run.plot()
+        assert ax2 is not ax
 
     def test_perform_fit_warn(self, p_run):
         with pytest.warns(DeprecationWarning):
